# qivon

./: .gitignore  CMakeLists.txt  README.md  qivon.pro
core/: CMakeLists.txt  core.pro
core/include/: image.h  qivon_config.h  util.h
core/src/: image.cpp
imgproc/: CMakeLists.txt  imgproc.pro
imgproc/include/: color.h  filter.h  geometry.h
imgproc/src/: color.cpp  filter.cpp  geometry.cpp
io/: CMakeLists.txt  io.pro
io/include/: jpgio.h  pngio.h
io/src/: jpgio.cpp  pngio.cpp
test/: CMakeLists.txt  test.pro
test/include/: test_color.h  test_filter.h  test_geometry.h  test_io.h  timing.h
test/src/: main.cpp  test_color.cpp  test_filter.cpp  test_geometry.cpp  test_io.cpp  timing.cpp
